--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         </section>
         <section id="o-meni">
             <h1>O meni</h1>
-            <img src="slike/kompetencije.svg" href="Kompetencije">
+            <p>Studentica diplomskog studija Nakladništva i Informacijskih tehnologija na Filozofskom fakultetu u Osijeku. <br>
+            Zanima me tehnologija i sve vezano uz nju, zbog čega sam se počela zanimati za izradu web stranica.</p>
+            <p>Usavršavam se u području Frontend developmenta, ali imam iskustva i u Backendu i izradi Baza podataka. <br>
+            Aktivno sudjelujem na raznim konferencijama, natjecanjima, volontiram te svakodnevno učim nešto novo.</p>
+            <p>Volim timski rad i izazove, ali i samostalno pronalaženje potencijalnih rješenja.</p>
         </section>
         <section id="iskustvo">
             <h1>Iskustvo</h1>
